actualizacion tamaño footer

--- a/registro.html
+++ b/registro.html
@@ -24,7 +24,6 @@
                 <option value="region1">Región 1</option>
                 <option value="region2">Región 2</option>
                 <option value="region3">Región 3</option>
-                <!-- Agrega más opciones de región según sea necesario -->
             </select>
 
             <label for="comuna">Comuna:</label>
@@ -49,7 +48,7 @@
     </div>
 
     <footer>
-        
+            <img src="images/footer.png">
     </footer>
 </body>
 </html>
