se integro la validacion de los campos de registro

--- a/registro.html
+++ b/registro.html
@@ -6,6 +6,7 @@
     <title>Registro de Usuario</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="images/favicon.png">
+    <script src="js/app.js" defer></script>
 </head>
 <body>
     <header>
