borrar index.html

--- a/noticias.html
+++ b/noticias.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Noticias</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/stylesnoticias.css">
         <link rel="icon" href="images/favicon.png">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+        
     </head>
     <body>
         <header class="navbar justify-content-between">
@@ -28,7 +24,7 @@
             <a class="nav-item nav-link" href="index.html">Inicio</a>
             <a class="nav-item nav-link" href="#">Normativas</a>
             <a class="nav-item nav-link" href="noticias.html">Noticias</a>
-            <a class="nav-item nav-link" href="#">Como ayudar</a>
+            <a class="nav-item nav-link" href="como-ayudar.html">Como ayudar</a>
             <a class="nav-item nav-link" href="#">Sobre nosotros</a>
           </nav>
         <section>
