--- a/registro.html
+++ b/registro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Usuario</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/stylesregistro.css">
     <link rel="icon" href="images/favicon.png">
 
     <script src="js/app.js" defer></script>
@@ -77,7 +77,6 @@
             <button type="submit">REGISTRARSE</button>
         </form>
     </div>
-
     <script src="js/app.js" defer></script>
 </body>
 </html>
