--- a/como-ayudar.html
+++ b/como-ayudar.html
@@ -8,6 +8,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/stylescomoayudar.css">
+        <link rel="stylesheet" href="css/stylesfooter.css">
         <link rel="icon" href="images/favicon.png">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -30,7 +31,7 @@
         </nav>
         
         <section class="fondo">
-            <ul>
+            <ul class="body-superior">
                 <li>
                     <a href="" target="">HOW</a>
                 </li>
@@ -64,6 +65,64 @@
                 impacto ambiental.
             </p>
         </section>
+
+        <footer>
+            <section class="lista">
+                <ul class="lista-1">
+                    <li>
+                        Concursos Públicos
+                    </li>
+                    <li>
+                        Licitación de esta Institución
+                    </li>
+                    <li>
+                        Pago de Proveedores
+                    </li>
+                    <li>
+                        Consultas Ciudadanas
+                    </li>
+                </ul>
+
+                <ul class="lista-1">
+                    <li>
+                        Empleos Públicos
+                    </li>
+                    <li>
+                        Empleos Públicos Servicio Civil
+                    </li>
+                    <li>
+                        Trámites y Servicios en línea
+                    </li>
+                    <li>
+                        Acceso Correo Institucional
+                    </li>
+                </ul>
+
+                <div class="footer-gob">
+                    <ul class="lista-2">
+                        <li>
+                            <img src="images/facebook.png">
+                        </li>
+                        <li>
+                            <img src="images/twitter.png">
+                        </li>
+                        <li>
+                            <img src="images/instagram.png">
+                        </li>
+                        <li>
+                            <img src="images/youtube.png">
+                        </li>
+                    </ul>
+                    <div class="animales-footer">
+                        <img src="images/animales-footer.png">
+                    </div>
+                </div>
+            </section>
+
+            <div class="logo-gob">
+                <img src="images/footer-gobierno.svg">
+            </div>
+        </footer>
 
         <script src="" async defer></script>
     </body>
