--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <h1>MAS COMENTADAS</h1>
       </section>
       <footer class="footer">
-        footer
+        footer final aun no
       </footer>
     </body>
 </html>
